--- a/PrimeNumber.Service/appsettings.json
+++ b/PrimeNumber.Service/appsettings.json
@@ -10,5 +10,7 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
-  }
+  },
+  "PrimeNumberLimit": 1000,
+  "ConsoleOutputDelay": 1000
 }
