--- a/PrimeNumber.Client/PrimeNumber.Client.csproj
+++ b/PrimeNumber.Client/PrimeNumber.Client.csproj
@@ -14,6 +14,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="PowerArgs" Version="4.0.3" />
   </ItemGroup>
 
   <ItemGroup>
