--- a/PrimeNumber.Service/PrimeNumber.Service.csproj
+++ b/PrimeNumber.Service/PrimeNumber.Service.csproj
@@ -1,28 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>cca544b1-b956-4000-97c5-350b6578bae8</UserSecretsId>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>cca544b1-b956-4000-97c5-350b6578bae8</UserSecretsId>
+		<AssemblyName>server</AssemblyName>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Protos\prime_number.proto" />
-  </ItemGroup>
+	<ItemGroup>
+		<Protobuf Include="Protos\prime_number.proto" GrpcServices="Server" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Protobuf Include="Protos\prime_number.proto" GrpcServices="Server" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Calzolari.Grpc.AspNetCore.Validation" Version="6.3.0" />
+		<PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
+		<PackageReference Include="SlimMessageBus.Host.Memory" Version="2.1.10" />
+		<PackageReference Include="System.CommandLine.DragonFruit" Version="0.4.0-alpha.22272.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Calzolari.Grpc.AspNetCore.Validation" Version="6.3.0" />
-    <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
-    <PackageReference Include="SlimMessageBus.Host.Memory" Version="2.1.10" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\PrimeNumber.Shared\PrimeNumber.Shared.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\PrimeNumber.Shared\PrimeNumber.Shared.csproj" />
+	</ItemGroup>
 
 </Project>
